# book-data-integration

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  Makefile  main.py  models.py  pyproject.toml
backend/database/: create_tables.sql  database.db  drop_tables.sql
backend/src/: __main__.py  dependecy.py  exceptions.py  settings.py
backend/src/data/: books_data.py  models.py
backend/src/database/: accessor.py  books_data.py  models.py
backend/src/handlers/: __init__.py  book.py  health.py
backend/src/repository/: book.py
backend/src/schema/: book.py
backend/src/service/: book.py
book_sites_crawler/: .gitignore  Makefile  pyproject.toml  scrapy.cfg
book_sites_crawler/book_sites_crawler/: items.py  middlewares.py  pipelines.py  settings.py
book_sites_crawler/book_sites_crawler/spiders/: book24.py  chitai_gorod.py  labirint.py
data-loader/: pyproject.toml
data-loader/results/: book24.json  chitai-gorod.json  labirint.json
data-loader/src/: __main__.py  config.py  db_conn.py  json_model.py  json_to_db.py  models.py  wrap_timer.py
data_pipeline/: Dockerfile  config.py  json_model.py  json_to_db.py  models.py  pyproject.toml
data_pipeline/src/: __main__.py  config.py  json_to_db.py  models.py  wrap_timer.py
deduplicator/: main.py  pyproject.toml
deduplicator/src/: __main__.py  clear.py  database.py  deduplicate.py  metaphone.py
doc/: Курсовой проект «Разработка интеграционной базы данных на основе парсинга веб-ресурсов».md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: base.css
frontend/src/components/: BookCard.vue  BookFilter.vue  CustomMinMaxSlider.vue  DebugInfo.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: book.ts
frontend/src/views/: BookDetailView.vue  BooksView.vue  HomeView.vue
init-db/: 01-create-tables.sql
my-mysql/: Dockerfile
my-mysql/src/: create.sql
